--- a/clarusway-full-stack-tr-12-22/django/class-notes/S3_ControlFlow_Loops/cont_flow.ipynb
+++ b/clarusway-full-stack-tr-12-22/django/class-notes/S3_ControlFlow_Loops/cont_flow.ipynb
@@ -9,10 +9,21 @@
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3.11.0 64-bit",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "name": "python",
+   "version": "3.11.0"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "5ffd7eb2cebf9ac436b5021ba01877e9cee6b03524e01bf8c8637d3e64111215"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
