--- a/clarusway-full-stack-tr-12-22/django/class-notes/S1_Python/s1_python.ipynb
+++ b/clarusway-full-stack-tr-12-22/django/class-notes/S1_Python/s1_python.ipynb
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +349,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0 (main, Oct 24 2022, 18:26:48) [MSC v.1933 64 bit (AMD64)]"
+   "version": "3.11.0"
   },
   "orig_nbformat": 4,
   "vscode": {
