--- a/clarusway-full-stack-tr-12-22/django/class-notes/S1_Python/s1_python.ipynb
+++ b/clarusway-full-stack-tr-12-22/django/class-notes/S1_Python/s1_python.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num1 = 'ali'\n",
+    "num1 = 'veli'\n",
     "a = 34\n",
     "b = 2.15\n",
     "c = False"
@@ -342,7 +342,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0 (main, Oct 24 2022, 18:26:48) [MSC v.1933 64 bit (AMD64)]"
+   "version": "3.11.0"
   },
   "orig_nbformat": 4,
   "vscode": {
