--- a/clarusway-full-stack-tr-12-22/django/class-notes/S1_Python/s1_python.ipynb
+++ b/clarusway-full-stack-tr-12-22/django/class-notes/S1_Python/s1_python.ipynb
@@ -14,6 +14,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
@@ -328,7 +335,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.7.8rc1 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -342,12 +349,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.7.8rc1"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "5ffd7eb2cebf9ac436b5021ba01877e9cee6b03524e01bf8c8637d3e64111215"
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
    }
   }
  },
