--- a/clarusway-full-stack-tr-12-22/django/class-notes/S3_ControlFlow_Loops/loops.ipynb
+++ b/clarusway-full-stack-tr-12-22/django/class-notes/S3_ControlFlow_Loops/loops.ipynb
@@ -61,6 +61,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [
@@ -251,7 +258,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.8rc1 64-bit",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -265,12 +272,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8rc1"
+   "version": "3.11.0 (main, Oct 24 2022, 18:26:48) [MSC v.1933 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+    "hash": "5ffd7eb2cebf9ac436b5021ba01877e9cee6b03524e01bf8c8637d3e64111215"
    }
   }
  },
