--- a/clarusway-full-stack-tr-12-22/django/class-notes/S6_Erros_Files/errors.ipynb
+++ b/clarusway-full-stack-tr-12-22/django/class-notes/S6_Erros_Files/errors.ipynb
@@ -94,7 +94,7 @@
     "for num in num_2:\n",
     "    try:\n",
     "        res_num= num_1 / num\n",
-    "    except Exception as e:\n",
+    "    except ZeroDivisionError as e:\n",
     "        print(f'you have error because of {e}')\n",
     "    else:\n",
     "        res_list.append(res_num)\n",
@@ -102,15 +102,6 @@
     "        print('This works every time')\n",
     "\n",
     "print(res_list)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print()"
    ]
   }
  ],
@@ -130,7 +121,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8rc1"
+   "version": "3.7.8rc1 (v3.7.8rc1:5f3933d61d, Jun 17 2020, 04:59:23) \n[Clang 6.0 (clang-600.0.57)]"
   },
   "orig_nbformat": 4,
   "vscode": {
